--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -9,26 +9,26 @@
         android:id="@+id/imageView"
         android:layout_marginRight="10dp"
         android:layout_centerVertical="true"/>
-
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/name"
         android:layout_toEndOf="@id/imageView"
         android:textColor="@color/black"
+        android:fontFamily="@font/bold"
         android:textSize="20dp"
         xmlns:tools="http://schemas.android.com/tools"
-        android:text="Name"/>
+        android:text="Название авто"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/email"
         android:layout_below="@id/name"
+        android:fontFamily="@font/proximanovareguiaritalic"
         android:layout_toEndOf="@id/imageView"
         android:textColor="@color/black"
         xmlns:tools="http://schemas.android.com/tools"
-        android:text="email@email.com"/>
+        android:text="Местонахождение"/>
 
     <TextView
         android:layout_width="wrap_content"
