--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -22,7 +22,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/email"
+        android:id="@+id/location"
         android:layout_below="@id/name"
         android:fontFamily="@font/proximanovareguiaritalic"
         android:layout_toEndOf="@id/imageView"
@@ -38,6 +38,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="1dp"
         android:layout_marginRight="1dp"
+        android:id="@+id/price"
         android:text="1100$"
         android:fontFamily="@font/semibold"
         android:textSize="35dp" />
