--- a/app/src/main/res/layout/carsharingactivity.xml
+++ b/app/src/main/res/layout/carsharingactivity.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/loginbtn_bg"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#cd394e">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
@@ -31,71 +31,47 @@
             app:srcCompat="@drawable/user" />
 
         <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@null"
-            android:onClick="onImageButtonClick"
-            android:scaleType="centerCrop"
-            android:src="@drawable/contact"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageButton
             android:id="@+id/imageButton2"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="140dp"
             android:layout_marginBottom="14dp"
             android:background="@null"
             android:onClick="onImageButtonClick1"
             android:scaleType="centerCrop"
             android:src="@drawable/home"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="413dp"
-        android:layout_height="472dp"
-        android:layout_marginEnd="5dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.3"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:itemCount="6"
-        tools:listitem="@layout/item_view" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="416dp"
-        android:layout_height="370dp"
-        android:background="#e86073"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        android:layout_width="415dp"
+        android:layout_height="492dp"
+        android:background="@drawable/btn_bg"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="345dp">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="345dp"
-            android:layout_height="201dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.507"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.502"
-            app:srcCompat="@drawable/volkswagen_polo" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="407dp"
+            android:layout_height="494dp"
+            android:visibility="visible"
+            tools:itemCount="6"
+            tools:layout_editor_absoluteX="-1dp"
+            tools:layout_editor_absoluteY="0dp"
+            tools:listitem="@layout/item_view" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="237dp"
+        android:layout_height="40dp"
+        android:fontFamily="@font/bold"
+        android:text="Ваш текущий транспорт: "
+        android:textSize="20sp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="14dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
